--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,24 @@
 <%- include('./Components/header') %>
 
-<h1>BGGGGdsdsdG</h1>
+<h1>Discover</h1>
+
+<div class="home_homeimage">
+    <img src="/img/homeimage.png" alt="">
+    <div class="home_homeimage_text">
+        <h2>Lorem ispum</h2>
+        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</p>
+        <a href="##" class="btn btn-primary">Discover our products</a>
+    </div>
+</div>
+
+<div class="home_searchbar">
+
+</div>
+
+<div class="home_boxesinfos">
+
+</div>
+
+
 
 <%- include('./Components/footer') %>
