--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,1 +1,36 @@
-@import url('./navbar.scss');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+$darkgreen: #0C3B2E;
+$lightgreen: #6D9773;
+$yellow: #FFBA00;
+$lightgrey: #F6F6F6;
+$text_second: #666666;
+$text: #080808;
+
+@import 'navbar';
+@import 'home';
+
+*{
+    font-family: 'Poppins';
+}
+body {
+    margin-left:30px ;
+    margin-right:30px ;
+}
+.btn{
+    text-decoration: none;
+    text-align: center;
+    padding: 8px;
+    padding-right: 16px;
+    padding-left: 16px;
+    border-radius: 30px;
+    cursor: pointer;
+    &-primary{
+        background-color: $yellow;
+        color: $lightgrey;
+    }
+    &-secondary{
+        border: solid 3px $yellow;
+        color: $yellow;
+    }
+}
