--- a/views/Components/header.ejs
+++ b/views/Components/header.ejs
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <nav class="navbar_smartphone">
-        <div class="navbar_smartphone_top"></div>
-        <div class="navbar_smartphone_bot"></div>
+        <div class="navbar_smartphone_top">
+            <div class="navbar_smartphone_top_logo">
+                <img src="/img/logo.png" alt="" >
+            </div>
+            <div class="navbar_smartphone_top_left">
+                <i class="fa-solid fa-bell fa-xl"></i>
+                <div class="navbar_smartphone_top_account">
+                    <img src="/img/pp.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="navbar_smartphone_bot">
+            <ul class="navbar_smartphone_bot_list">
+                <li><i class="fa-solid fa-map fa-xl"></i></li>
+                <li><i class="fa-solid fa-seedling fa-xl"></i></li>
+                <li><i class="fa-solid fa-house fa-xl"></i></li>
+                <li><i class="fa-solid fa-heart fa-xl"></i></li>
+                <li><i class="fa-solid fa-cart-shopping fa-xl"></i></li>
+            </ul>
+        </div>
     </nav>
 
     
