--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,13 +12,68 @@
 </div>
 
 <div class="home_searchbar">
-
+    <input type="text" placeholder="Search">
 </div>
 
 <div class="home_boxesinfos">
-
+    <div>
+        <img src="/img/plante.png" alt="">
+        <p>Lorem</p>
+    </div>
+    <div>
+        <img src="/img/camion.png" alt="">
+        <p>Lorem</p>
+    </div>
+    <div>
+        <img src="/img/gouttes.png" alt="">
+        <p>Lorem</p>
+    </div>
 </div>
 
+<div class="home_slider">
+    <img src="/img/secondimage.png" alt="">
+</div>
+
+<div class="home_theones">
+    <div class="home_theones_title">
+        <h2>A la une</h2>
+        <a href="" class="btn btn-secondary">Voir plus</a>
+    </div>
+    <div class="home_theones_content">
+        <div class="card">
+            <img class="card_img" src="/img/vraiplante.png" alt="">
+            <div class="card_content">
+                <p class="card_content_title">Lorem Ipsum</p>
+                <p class="card_content_price">36.58€</p>
+            </div>
+            <i class="card_icon fa-regular fa-heart"></i>
+        </div>
+        <div class="card">
+            <img class="card_img" src="/img/vraiplante.png" alt="">
+            <div class="card_content">
+                <p class="card_content_title">Lorem Ipsum</p>
+                <p class="card_content_price">36.58€</p>
+            </div>
+            <i class="card_icon fa-regular fa-heart"></i>
+        </div>
+        <div class="card">
+            <img class="card_img" src="/img/vraiplante.png" alt="">
+            <div class="card_content">
+                <p class="card_content_title">Lorem Ipsum</p>
+                <p class="card_content_price">36.58€</p>
+            </div>
+            <i class="card_icon fa-regular fa-heart"></i>
+        </div>
+        <div class="card">
+            <img class="card_img" src="/img/vraiplante.png" alt="">
+            <div class="card_content">
+                <p class="card_content_title">Lorem Ipsum</p>
+                <p class="card_content_price">36.58€</p>
+            </div>
+            <i class="card_icon fa-regular fa-heart"></i>
+        </div>
+    </div>
+</div>
 
 
 <%- include('./Components/footer') %>
