--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,31 +6,10 @@ $yellow: #FFBA00;
 $lightgrey: #F6F6F6;
 $text_second: #666666;
 $text: #080808;
+$box-shadow: 0px 2px 5px 2px rgba(36, 36, 36, 0.10);
 
+@import 'generals';
 @import 'navbar';
 @import 'home';
+@import 'card';
 
-*{
-    font-family: 'Poppins';
-}
-body {
-    margin-left:30px ;
-    margin-right:30px ;
-}
-.btn{
-    text-decoration: none;
-    text-align: center;
-    padding: 8px;
-    padding-right: 16px;
-    padding-left: 16px;
-    border-radius: 30px;
-    cursor: pointer;
-    &-primary{
-        background-color: $yellow;
-        color: $lightgrey;
-    }
-    &-secondary{
-        border: solid 3px $yellow;
-        color: $yellow;
-    }
-}
