--- a/assets/sass/navbar.scss
+++ b/assets/sass/navbar.scss
@@ -1,5 +1,13 @@
+@media screen and (min-width: 500px)
+{
+    .navbar_smartphone{
+        display: none;
+    }
+}
+
 .navbar_smartphone{
     &_top{
+        z-index: 100;
         width: 100%;
         display: flex;
         flex-direction: row;
@@ -27,19 +35,16 @@
         }
     }
     &_bot{
+        z-index: 100;
         background-color: $darkgreen;
-        position: absolute;
-        left: 0; 
-        right: 0; 
-        margin-left: auto; 
-        margin-right: auto; 
-        bottom: 30px;
-        width: 80%;
+        position: fixed;
+        width: 80vw;
         height: 60px;
+        top: 90vh;
+        left: 10vw;
         border-radius: 40px;
 
         &_list{
-            width: 100%;
             height: 100%;
             align-items: center;
             list-style-type: none;
