--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,4 +12,6 @@ $box-shadow: 0px 2px 5px 2px rgba(36, 36, 36, 0.10);
 @import 'navbar';
 @import 'home';
 @import 'card';
+@import 'nursery';
+@import 'login';
 
