--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,6 +25,7 @@ body {
 .btn-primary {
   background-color: #FFBA00;
   color: #F6F6F6;
+  border: none;
 }
 .btn-secondary {
   border: solid 3px #FFBA00;
@@ -194,6 +195,67 @@ input[type=text]::placeholder {
   position: absolute;
   top: 8px;
   right: 8px;
+}
+
+.map_searchbar {
+  padding: 20px;
+}
+
+.map {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.map_searchbar > input {
+  width: 100%;
+  background-color: #F6F6F6;
+  border: none;
+  color: #666666;
+  height: 30px;
+  border-radius: 60px;
+  box-shadow: 0px 2px 5px 2px rgba(36, 36, 36, 0.1);
+}
+
+#map {
+  width: 80vw;
+  height: 80vh;
+}
+
+.btn_map {
+  padding: 20px;
+  justify-content: space-between;
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+}
+
+.login_title {
+  display: flex;
+  justify-content: center;
+}
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+input {
+  margin-bottom: 24px;
+  padding: 10px;
+  border: 0;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  border-radius: 20px;
+}
+
+.login_text {
+  display: flex;
+  justify-content: center;
+}
+
+.login_button {
+  display: flex;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=style.css.map */
