--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,12 +238,14 @@ input[type=text]::placeholder {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 input {
   margin-bottom: 24px;
   padding: 10px;
   border: 0;
+  width: 75%;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
   border-radius: 20px;
 }
@@ -256,6 +258,12 @@ input {
 .login_button {
   display: flex;
   justify-content: center;
+}
+
+.login_link {
+  text-decoration: none;
+  color: #FFBA00;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
