--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <input type="password" placeholder="Mot de passe" />
 </div>
 <div class="login_text">
-    <p  >Pas encore de compte ? <a href="">Inscrivez vous</a></p>
+    <p  >Pas encore de compte ? <a class="login_link" href="">Inscrivez vous</a></p>
 </div>
 <div class="login_button">
   <button class="btn btn-primary">Connection</button>  
