--- a/assets/sass/login.scss
+++ b/assets/sass/login.scss
@@ -7,12 +7,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 input {
     margin-bottom: 16px*1.5;
     padding: 10px;
     border: 0;
+    width: 75%;
     box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
     border-radius:20px;
 }
@@ -25,4 +27,9 @@ input {
 .login_button{
     display: flex;
     justify-content: center;
+}
+.login_link{
+    text-decoration: none;
+    color: $yellow;
+    font-weight: bold;
 }
