--- a/views/Components/header.ejs
+++ b/views/Components/header.ejs
@@ -9,6 +9,35 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <nav class="navbar_desktop">
+        <div class="navbar_desktop">
+            <div class="navbar_desktop_left">
+                <img src="/img/logo.png" alt="" >
+            </div>
+            <div class="navbar_desktop_right">
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/shop">Shop</a></li>
+                    <li><a href="/nursery">Nurserie</a></li>
+                    <li><a href="">Vos favoris</a></li>
+                    <li>
+                        <a href="">
+                            <i class="fa-solid fa-bell fa-xl"></i>
+                            
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/cart">
+                            <i class="fa-solid fa-cart-shopping fa-xl"></i>
+                            <p>4</p>
+                        </a>
+                    </li>
+                    <li><a href=""><img src="/img/pp.png" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <nav class="navbar_smartphone">
         <div class="navbar_smartphone_top">
             <div class="navbar_smartphone_top_logo">
