--- a/assets/sass/card.scss
+++ b/assets/sass/card.scss
@@ -1,3 +1,5 @@
+
+
 .card{
     z-index: 10;
     margin-top: 32px;
@@ -9,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    text-decoration: none;
     
     &_img{
         width: 100%;
@@ -31,8 +34,29 @@
         }
     }
     &_icon{
+        z-index: 200;
         position: absolute;
-        top: 8px;
+        top: 16px;
         right: 8px;
     }
+}
+
+@media screen and (min-width: 500px)
+{
+    .card{
+        width: 20%;
+
+        &_content{
+            &_title{
+                font-size: 16px;
+                margin: 0;
+            }
+    
+            &_price{
+                font-size: 16px;
+                margin: 0;
+            }
+        }
+    }
+
 }
