--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,6 +10,8 @@ $box-shadow: 0px 2px 5px 2px rgba(36, 36, 36, 0.10);
 
 @import 'generals';
 @import 'navbar';
+@import 'shop';
 @import 'home';
 @import 'card';
+@import 'cart';
 
