--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,4 +266,34 @@ input {
   font-weight: bold;
 }
 
+footer {
+  background-color: #0C3B2E;
+}
+
+.footer_list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.div1 {
+  grid-area: 1/1/2/2;
+}
+
+.div2 {
+  grid-area: 1/2/2/3;
+}
+
+.div3 {
+  grid-area: 1/3/2/4;
+}
+
 /*# sourceMappingURL=style.css.map */
