--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 .btn {
+  height: 30px;
   text-decoration: none;
   text-align: center;
   padding: 6px;
@@ -175,6 +176,7 @@ input[type=text]::placeholder {
   justify-content: space-between;
 }
 .shop_filter {
+  padding: 16px;
   width: 25%;
   background-color: #F6F6F6;
   position: sticky;
@@ -260,6 +262,7 @@ input[type=text]::placeholder {
 }
 .contact > img {
   width: 50%;
+  display: none;
 }
 .contact > div {
   width: 50%;
@@ -339,6 +342,17 @@ input[type=text]::placeholder {
     margin: 12px;
     margin-bottom: 0;
     margin-top: 0;
+  }
+  .contact {
+    margin: 0 !important;
+    margin-top: 10% !important;
+    width: 100%;
+  }
+  .contact > img {
+    display: block;
+  }
+  .contact > div {
+    width: 100%;
   }
 }
 .card {
