--- a/views/home.ejs
+++ b/views/home.ejs
@@ -69,7 +69,7 @@
         <p>Souscrivez a la New's later</p>
         <div>
             <input type="text" placeholder="Votre email">
-            <a href="#" class="btn btn-primary">Souscrire</a>
+            <a href="#" class="btn btn-primary contact_btn">Souscrire</a>
         </div>
     </div>
     <img src="/img/pins.jpg" alt="">
