--- a/assets/sass/footer.scss
+++ b/assets/sass/footer.scss
@@ -1,19 +1,43 @@
 footer{
     background-color: $darkgreen;
+    margin-left:-150px ;
+    margin-right:-150px ;
 }
 
 
 .footer_list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    padding: 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     }
     
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 1 / 3 / 2 / 4; }
+    .div1 { 
+        color: $yellow;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 33%;
+}
+    .div2 { 
+        color: $yellow;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 33%;
+        
+    }
+    .div3 { 
+        color: $yellow;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 33%;
+    }
+    p{
+        color: $yellow;
+        font-size:medium;
+    }
