--- a/views/Components/footer.ejs
+++ b/views/Components/footer.ejs
@@ -1,9 +1,20 @@
 <footer>
     <div class="parent footer_list">
-        <div class="div1"> a</div>
-        <div class="div2">a </div>
-        <div class="div3"> a</div>
+        <div class="div1">
+            <i class="fa-solid fa-2x fa-location-pin"></i>
+            <p>Amiens,80000</p>
+          
         </div>
+        <div class="div2">
+            <i class="fa-solid fa-2x fa-phone"></i>
+            <p>+336 054 489</p>
+        </div>
+        <div class="div3">
+            <i class="fa-solid fa-2x fa-envelope"></i>
+            <p>plantashop@gmail.com</p>
+        </div>
+    </div>
 </footer>
 </body>
+
 </html>
