--- a/assets/sass/nursery.scss
+++ b/assets/sass/nursery.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 48px;
     
     &_searchbar>input{
         width: 100%;
