--- a/views/Components/header.ejs
+++ b/views/Components/header.ejs
@@ -32,7 +32,7 @@
                             <p>4</p>
                         </a>
                     </li>
-                    <li><a href=""><img src="/img/pp.png" alt=""></a></li>
+                    <li><a href="/profil"><img src="/img/pp.png" alt=""></a></li>
                 </ul>
             </div>
         </div>
