--- a/assets/sass/generals.scss
+++ b/assets/sass/generals.scss
@@ -5,6 +5,7 @@ p,a,h1,h2 {
     color: $darkgreen;
 }
 body {
+    margin: 0;
     margin-left:30px ;
     margin-right:30px ;
 }
@@ -12,6 +13,7 @@ body {
     height: 30px;
     text-decoration: none;
     text-align: center;
+    align-self: center;
     padding: 6px;
     padding-right: 16px;
     padding-left: 16px;
@@ -60,5 +62,10 @@ input[type="text"]::placeholder {
     }
     p{
         font-size: 20px;
+    }
+
+    .btn{
+        font-size: 18px;
+        height: auto;
     }
 }
