--- a/assets/sass/home.scss
+++ b/assets/sass/home.scss
@@ -100,11 +100,16 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            align-items: center;
             &>p{
                 padding: 12px;
+                font-size: 16px;
                 border-radius: 60px;
                 background-color: $lightgrey;
                 color: $darkgreen;
+            }
+            &>input{
+                margin: 0;
             }
         }
         
