--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -16,5 +16,7 @@ $box-shadow: 0px 2px 5px 2px rgba(36, 36, 36, 0.10);
 @import 'cart';
 @import 'nursery';
 @import 'login';
+@import 'profil';
 @import 'footer';
+@import 'product';
 
