--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ p, a, h1, h2 {
 }
 
 body {
+  margin: 0;
   margin-left: 30px;
   margin-right: 30px;
 }
@@ -16,6 +17,7 @@ body {
   height: 30px;
   text-decoration: none;
   text-align: center;
+  align-self: center;
   padding: 6px;
   padding-right: 16px;
   padding-left: 16px;
@@ -66,6 +68,10 @@ input[type=text]::placeholder {
   }
   p {
     font-size: 20px;
+  }
+  .btn {
+    font-size: 18px;
+    height: auto;
   }
 }
 .navbar_desktop {
@@ -281,12 +287,17 @@ input[type=text]::placeholder {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 .contact > div > div > p {
   padding: 12px;
+  font-size: 16px;
   border-radius: 60px;
   background-color: #F6F6F6;
   color: #0C3B2E;
+}
+.contact > div > div > input {
+  margin: 0;
 }
 
 @media screen and (min-width: 500px) {
@@ -369,7 +380,9 @@ input[type=text]::placeholder {
   text-decoration: none;
 }
 .card_img {
-  width: 100%;
+  max-height: 250px;
+  width: fit-content;
+  align-self: center;
 }
 .card_content {
   font-weight: bold;
@@ -468,6 +481,7 @@ input[type=text]::placeholder {
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 48px;
 }
 .map_searchbar > input {
   width: 100%;
@@ -529,6 +543,37 @@ input {
   font-weight: bold;
 }
 
+.profil {
+  display: flex;
+  flex-direction: column;
+}
+.profil_btns {
+  width: 30%;
+  margin-bottom: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.profil_content {
+  margin-top: 10%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.profil_searchbar {
+  width: 100%;
+  background-color: #F6F6F6;
+  border: none;
+  color: #666666;
+  height: 20px;
+  border-radius: 60px;
+  box-shadow: 0px 2px 5px 2px rgba(36, 36, 36, 0.1);
+}
+.profil_stars {
+  display: flex;
+  flex-direction: row;
+}
+
 footer {
   background-color: #0C3B2E;
 }
@@ -554,6 +599,78 @@ footer {
 
 .div3 {
   grid-area: 1/3/2/4;
+}
+
+.product {
+  margin-top: 24px;
+  margin-bottom: 48px;
+  display: flex;
+  flex-direction: row;
+}
+.product_img {
+  width: 40%;
+  height: auto;
+  background-color: #6D9773;
+}
+.product_infos {
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+}
+.product_infos_title {
+  display: flex;
+  flex-direction: column;
+}
+.product_infos_icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 16px;
+}
+.product_infos_icons > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  padding: 20px;
+  padding-top: 48px;
+  width: 15%;
+  box-shadow: 0px 2px 5px 2px rgba(36, 36, 36, 0.1);
+  background-color: #F6F6F6;
+  border-radius: 16px;
+}
+.product_infos_icons > div > p {
+  color: #6D9773;
+  margin: 0;
+  margin-top: 28px;
+}
+.product_infos_icons > div > i {
+  color: #6D9773;
+}
+.product_infos_bottom {
+  margin-top: 24px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+.product_infos_bottom > div {
+  width: 10%;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+}
+.product_infos_bottom_add {
+  padding: 8px;
+  border-radius: 16px;
+  background-color: #F6F6F6;
+}
+.product_infos_bottom_add > p {
+  margin: 0;
+}
+.product_interest {
+  margin-bottom: 48px;
 }
 
 /*# sourceMappingURL=style.css.map */
