--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <div class="home_homeimage_text">
         <h2>Lorem ispum</h2>
         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut.</p>
-        <a href="##" class="btn btn-primary">Discover our products</a>
+        <a href="/shop" class="btn btn-primary">Discover our products</a>
     </div>
 </div>
 
@@ -38,18 +38,18 @@
 <div class="home_theones">
     <div class="home_theones_title">
         <h2>A la une</h2>
-        <a href="" class="btn btn-secondary">Voir plus</a>
+        <a href="/shop" class="btn btn-secondary">Voir plus</a>
     </div>
     <div class="home_theones_content">
         <% for (let i=0; i < 4; i++) { %>
             <a class="card" href="#ddkd" id="card_<%=i%>">
-                <img class="card_img" src="/img/vraiplante.png" alt="">
+                <img class="card_img" src="/img/<%=products[i].img%>.png" alt="">
                 <div class="card_content">
                     <p class="card_content_title">
                         <%= products[i].name %>
                     </p>
                     <p class="card_content_price">
-                        <%= products[i].price %>
+                        <%= products[i].price %>€
                     </p>
                 </div>
                 <i class="card_icon fa-regular fa-heart fa-xl"></i>
