--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,7 +42,7 @@
     </div>
     <div class="home_theones_content">
         <% for (let i=0; i < 4; i++) { %>
-            <a class="card" href="#ddkd" id="card_<%=i%>">
+            <a class="card" href="product/<%=products[i].id%>" id="card_<%=i%>">
                 <img class="card_img" src="/img/<%=products[i].img%>.png" alt="">
                 <div class="card_content">
                     <p class="card_content_title">
