--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,45 +1,42 @@
 <%- include('./Components/header') %>
 
 <div class="product">
-    <img class="product_img" src="/img/vraiplante.png" alt="">
+    <img class="product_img" src="/img/<%=products[id].img%>.png" alt="">
     <div class="product_infos">
         <div class="product_infos_title">
-            <h1>title</h1>
-            <p>34.99€</p>
+            <h1><%=products[id].name%></h1>
+            <p><%=products[id].price%>€</p>
         </div>
-        <p class="product_infos_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eos velit esse? Est placeat amet minima ex modi, ab fugiat animi, obcaecati praesentium delectus molestias eos a, laboriosam quibusdam! Voluptas.</p>
+        <p class="product_infos_desc" style="color: black;"><%=products[id].description%></p>
         <div class="product_infos_icons">
             <div>
                 <i class="fa-solid fa-droplet fa-2xl"></i>
-                <p>dd</p>
+                <p><%=products[id].water%></p>
             </div>
             <div>
                 <i class="fa-solid fa-sun fa-2xl"></i>
-                <p>dd</p>
+                <p><%=products[id].light%></p>
             </div>
             <div>
                 <i class="fa-solid fa-temperature-three-quarters fa-2xl"></i>
-                <p>dd</p>
+                <p><%=products[id].temperature%></p>
             </div>
             <div>
                 <i class="fa-solid fa-cloud fa-2xl"></i>
-                <p>dd</p>
+                <p><%=products[id].humidity%></p>
             </div>
         </div>
         <div class="product_infos_stars">
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
-            <i class="fa-solid fa-star"></i>
+            <% for(let i=0; i < products[id].stars; i++) {%>
+                <i class="fa-solid fa-star" style="color: #FFBA00;"></i>
+            <% } %>
+            <% for(let i=products[id].stars; i < 5; i++) {%>
+                <i class="fa-solid fa-star" style="color: #666666;"></i>
+            <% } %>
         </div>
         <div class="product_infos_bottom">
-            <div class="product_infos_bottom_add">
-                <p>+</p>
-                <p>1</p>
-                <p>-</p>
-            </div>
-            <button class="btn btn-primary">Ajouter au panier</button>
+          
+            <button class="btn btn-primary" id="<%=products[id].id%>">Ajouter au panier</button>
         </div>
     </div>
 </div>
@@ -50,8 +47,8 @@
 
 <div class="home_theones_content product_interest">
     <% for (let i=0; i < 4; i++) { %>
-        <a class="card" href="#ddkd" id="card_<%=i%>">
-            <img class="card_img" src="/img/vraiplante.png" alt="">
+        <a class="card"  href="http://localhost:8000/product/<%=products[i].id%>" id="card_<%=i%>">
+            <img class="card_img" src="/img/<%=products[i].img%>.png" alt="">
             <div class="card_content">
                 <p class="card_content_title">
                     <%= products[i].name %>
