--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -16,7 +16,7 @@
     </div>
     <div class="shop_content">
         <% for (let i=0; i < products.length; i++) { %>
-            <a class="card" href="#ddkd" id="card_<%=i%>">
+            <a class="card" href="product/<%=products[i].id%>" id="card_<%=i%>">
                 <img class="card_img" src="/img/<%=products[i].img%>.png" alt="">
                 <div class="card_content">
                     <p class="card_content_title">
